--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CHECKER (Update: 17 June, Revision 1)</title>
+    <title>CHECKER (Update: 25 June, Revision 1)</title>
     <style>
       body {
         background-color: #e0e0e0;
@@ -20,10 +20,12 @@
         href="https://gitgud.io/ApplePencilUser/oai-reverse-proxy"
         target="_blank"
         >the original one</a
-      >,<br />so use them with a clear understanding of the risks and the fact
-      that they may be logged.<br /><br />
-      Note that this site is based on worldsoupkitchen created by gook dev.
-      Thank you to him and to alwaysfindtheway <3.
+      >,<br /><span
+        >so use them with a clear understanding of the risks and the fact that
+        they may be logged.<br /><br />
+        Note that this site is based on worldsoupkitchen created by gook dev.
+        Thank you to him and to alwaysfindtheway <3.</span
+      >
     </h5>
     <br />
     <div id="block">
@@ -442,25 +444,12 @@
         sandbox
       ></iframe>
       <h3 style="text-align: center">
-        <a href="https://gkswk-gwon.hf.space/?__theme=light" target="_blank"
-          >29. Gwon - a Hugging Face Space by gkswk
+        <a href="https://qsiq-archlive.hf.space/?__theme=light" target="_blank"
+          >29. Archlive - a Hugging Face Space by QsIQ
         </a>
       </h3>
       <iframe
         id="iframe29"
-        src="https://gkswk-gwon.hf.space/?__theme=light"
-        width="100%"
-        height="500"
-        allow="encrypted-media"
-        sandbox
-      ></iframe>
-      <h3 style="text-align: center">
-        <a href="https://qsiq-archlive.hf.space/?__theme=light" target="_blank"
-          >30. Archlive - a Hugging Face Space by QsIQ
-        </a>
-      </h3>
-      <iframe
-        id="iframe30"
         src="https://qsiq-archlive.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -592,10 +581,6 @@
       };
       var iframe29 = document.getElementById("iframe29");
       iframe29.contentWindow.document.open = function () {
-        return null;
-      };
-      var iframe30 = document.getElementById("iframe30");
-      iframe30.contentWindow.document.open = function () {
         return null;
       };
     </script>
