--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CHECKER (Update: 09 July, Revision 2)</title>
+    <title>CHECKER (Update: 12 July, Revision 1)</title>
     <style>
       body {
         background-color: #e0e0e0;
@@ -46,14 +46,14 @@
       ></iframe>
       <h3 style="text-align: center">
         <a
-          href="https://oai-proxy-zi5e.onrender.com/?__theme=light"
+          href="https://username84-2.hf.space/?__theme=light"
           target="_blank"
-          >2. True - a Hugging Face Space by oai-proxy-zi5e
+          >2. G2 - a Hugging Face Space by username84
         </a>
       </h3>
       <iframe
         id="iframe2"
-        src="https://oai-proxy-zi5e.onrender.com/?__theme=light"
+        src="https://username84-2.hf.space/?__theme=light"
         width="100%"
         height="500"
         allow="encrypted-media"
